# UE5MinimalRenderer

./: .gitignore  3D_ARCHITECTURE_DIAGRAM.md  3D_IMPLEMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUILD_TEST.md  CAMERA_CONTROLS.md  CAMERA_CONTROLS_CN.md  CHANGELOG.md  CMakeLists.txt  CODE_SNIPPETS.md  EXPECTED_RESULT.md  EXPECTED_VISUAL_RESULT.md  FINAL_SUMMARY.txt  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SCENE_ARCHITECTURE.md  SCENE_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  TODO.md  build.bat
.github/: copilot-instructions.md
Content/Models/: african_head.mtl  bunny.mtl  cornell_box.mtl  cube.mtl  cylinder.mtl  teapot.mtl
Shaders/: DepthOnly.usf  Lit.usf  Unlit.usf
Source/: CMakeLists.txt  Main.cpp
Source/Asset/: OBJLoader.cpp  OBJLoader.h  TextureLoader.cpp  TextureLoader.h
Source/Core/: CMakeLists.txt  CoreTypes.cpp  CoreTypes.h  RenderDocCapture.cpp  RenderDocCapture.h  ShaderLoader.cpp  ShaderLoader.h
Source/Game/: CMakeLists.txt  Game.cpp  Game.h  GameGlobals.h  Primitive.cpp  Primitive.h  PrimitiveSceneProxy.cpp  PrimitiveSceneProxy.h  Scene.cpp  Scene.h
Source/Lighting/: CMakeLists.txt  Light.cpp  Light.h  LightVisualization.cpp  LightVisualization.h  LightingConstants.h  LitPrimitive.cpp  LitPrimitive.h  LitSceneProxy.cpp  LitSceneProxy.h
Source/RHI/: CMakeLists.txt  RHI.cpp  RHI.h
Source/RHI/DX12/: DX12RHI.cpp  DX12RHI.h
Source/RHI_DX12/: CMakeLists.txt  DX12RHI.cpp  DX12RHI.h  d3dx12.h  d3dx12_core.h  d3dx12_property_format_table.h
Source/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  RTPool.cpp  RTPool.h  RenderStats.cpp  RenderStats.h  Renderer.cpp  Renderer.h  ShadowMapping.cpp  ShadowMapping.h
Source/Runtime/: CMakeLists.txt  Main.cpp
Source/Scene/: CMakeLists.txt  LitSceneProxy.cpp  LitSceneProxy.h  OBJPrimitive.cpp  OBJPrimitive.h  Scene.cpp  Scene.h  ScenePrimitive.cpp  ScenePrimitive.h  TexturedSceneProxy.cpp  TexturedSceneProxy.h  UnlitSceneProxy.cpp  UnlitSceneProxy.h
Source/Shaders/: BasePassVertexShader.usf  Common.ush  ForwardLightingPixelShader.usf  LightingCommon.ush  ShaderCompiler.cpp  ShaderCompiler.h  ShadowDepthVertexShader.usf  TexturedLightingPixelShader.usf
Source/TaskGraph/: CMakeLists.txt  RenderCommands.cpp  RenderCommands.h  TaskGraph.cpp  TaskGraph.h
Tests/: CMakeLists.txt  MatrixTests.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/Source/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/Core/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/Game/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/RHI/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/RHI_DX12/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/Renderer/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/Runtime/: Makefile  cmake_install.cmake
_codeql_build_dir/Source/TaskGraph/: Makefile  cmake_install.cmake
